# zkwasm

./: Cargo.toml  README.md  justfile
data/: add.wasm  add.wat  add.zkasm  add_floats.wat  fibonacci.wasm  fibonacci.wat  fibonacci_recursive.wat  locals.wasm  locals.wat  locals.zkasm  locals_simple.wasm  locals_simple.wat  locals_simple.zkasm  loop.wasm
src/: codegen.rs  main.rs
tests/: integration_test.rs
