[package]
name = "zkwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
strum = "0.25.0"
wasmi = "0.31.0"
wasmparser = "0.110.0"
wat = "1.0.69"

[[bin]]
name = "runner"
test = false
